--- a/Resources/views/AuditFormSection/_load.html.twig
+++ b/Resources/views/AuditFormSection/_load.html.twig
@@ -9,7 +9,7 @@
         {% endif %}
     </td>
     <td style="padding: 0 0 0 0 ">
-        <div class="btn-group pull-right cisco-audit-options" style="display: none;">
+        <div class="btn-group pull-right cisco-audit-options">
             <a class="btn btn-mini cisco-audit-section-view">
                 <i class="icon-eye-open" title="View"></i>
             </a>
