--- a/Resources/views/AuditFormField/_item.html.twig
+++ b/Resources/views/AuditFormField/_item.html.twig
@@ -2,8 +2,8 @@
 <tr class="cisco-audit-field-row">
     <td colspan="2">{{ field.title }}</td>
     <td>
-        {{ form_widget( form ) }}
-    
+        {#{% render 'CiscoSystemsAuditBundle:AuditFormField:list' with { 'fieldId': field.id } %}
+        {#{ form_widget( form ) }#}
     {% if field.section is empty %}
         <i>No Section assigned.</i>
     {% else %}
@@ -19,16 +19,16 @@
     {% endif %}
     </td>
     <td>
-        <div class="btn-group pull-right cisco-audit-options" style="display: none;">
-            <a class="btn btn-mini cisco-audit-field-view">
+        <div class="btn-group pull-right cisco-audit-options">
+            <a class="btn btn-mini cisco-audit-field-view disabled">
                 <i class="icon-eye-open" title="View"></i>
             </a>
-            <a class="btn btn-mini cisco-audit-field-view" data-field-id="{{ field.id }}"
+            <a class="btn btn-mini cisco-audit-field-edit disabled" data-field-id="{{ field.id }}"
                 href="{{ path( 'cisco_auditfield_edit', { 'field_id': field.id } ) }}"
                 title="Edit">
                  <i class="icon-wrench"></i>
             </a>
-            <a class="btn btn-mini cisco-audit-field-delete" title="Delete"
+            <a class="btn btn-mini cisco-audit-field-delete disabled" title="Delete"
                 href="{{ path( 'cisco_auditfield_delete', { 'field_id': field.id } ) }}">
                 <i class="icon-trash"></i>
             </a>
