--- a/Resources/views/AuditFormField/edit.html.twig
+++ b/Resources/views/AuditFormField/edit.html.twig
@@ -10,10 +10,37 @@
 {% endblock %}
 
 {% block pagecontent %}
+<style type=text/css>
+.bs-docs-questions
+{
+    position: relative;
+    margin: 15px 0;
+    padding: 39px 19px 14px;
+    background-color: white;
+    border: 1px solid #DDD;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+.bs-docs-questions::after {
+    content: "Questions";
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    padding: 3px 7px;
+    font-size: 12px;
+    font-weight: bold;
+    background-color: whiteSmoke;
+    border: 1px solid #DDD;
+    color: #9DA0A4;
+    -webkit-border-radius: 4px 0 4px 0;
+    -moz-border-radius: 4px 0 4px 0;
+    border-radius: 4px 0 4px 0;
+}
+</style>
 <div class="container">
     <div class="span11">
-    {{ ladybug_dump( field.section.auditform.binaryFlagOnly ) }}
-    {{ ladybug_dump( field.flag ) }}
         <form class="form-horizontal" method="POST" action="">
             <div class="pull-right">
                 <button type="submit" class="btn btn-mini">
@@ -37,7 +64,7 @@
                     <div class="control-label">
                         {{ form_label( form.title ) }}
                     </div>
-                    <div class="controls">
+                    <div class="controls" required="required">
                         {{ form_widget( form.title ) }}
                         {{ form_errors( form.title ) }}
                     </div>
@@ -81,47 +108,49 @@
                     </div>
                 </div>
             </div>
-            <div class="controls controls-row">
-                <div class="control-group">
-                    <div class="control-label">
-                        {{ form_label( form.answer_yes ) }}
-                    </div>
-                    <div class="controls">
-                        {{ form_widget( form.answer_yes, { 'attr': {'class': 'input-xxlarge' }}) }}
-                        {{ form_errors( form.answer_yes ) }}
-                    </div>
-                </div>
-            </div>
-            <div class="controls controls-row">
-                <div class="control-group">
-                    <div class="control-label">
-                        {{ form_label( form.answer_no ) }}
-                    </div>
-                    <div class="controls">
-                        {{ form_widget( form.answer_no, { 'attr': { 'class': 'input-xxlarge' }}) }}
-                        {{ form_errors( form.answer_no ) }}
+            <div class="bs-docs-questions">
+                <div class="controls controls-row">
+                    <div class="control-group">
+                        <div class="control-label">
+                            {{ form_label( form.answer_yes ) }}
+                        </div>
+                        <div class="controls">
+                            {{ form_widget( form.answer_yes, { 'attr': {'class': 'input-xxlarge' }}) }}
+                            {{ form_errors( form.answer_yes ) }}
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="controls controls-row">
-                <div class="control-group">
-                    <div class="control-label">
-                        {{ form_label( form.answer_acceptable ) }}
-                    </div>
-                    <div class="controls">
-                        {{ form_widget( form.answer_acceptable, { 'attr': {  'class': 'input-xxlarge' }}) }}
-                        {{ form_errors( form.answer_acceptable ) }}
+                <div class="controls controls-row">
+                    <div class="control-group">
+                        <div class="control-label">
+                            {{ form_label( form.answer_no ) }}
+                        </div>
+                        <div class="controls">
+                            {{ form_widget( form.answer_no, { 'attr': { 'class': 'input-xxlarge' }}) }}
+                            {{ form_errors( form.answer_no ) }}
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="controls controls-row">
-                <div class="control-group">
-                    <div class="control-label">
-                        {{ form_label( form.answer_not_applicable) }}
+                <div class="controls controls-row">
+                    <div class="control-group">
+                        <div class="control-label">
+                            {{ form_label( form.answer_acceptable ) }}
+                        </div>
+                        <div class="controls">
+                            {{ form_widget( form.answer_acceptable, { 'attr': {  'class': 'input-xxlarge' }}) }}
+                            {{ form_errors( form.answer_acceptable ) }}
+                        </div>
                     </div>
-                    <div class="controls">
-                        {{ form_widget( form.answer_not_applicable, { 'attr': {'class': 'input-xxlarge' }}) }}
-                        {{ form_errors( form.answer_not_applicable ) }}
+                </div>
+                <div class="controls controls-row">
+                    <div class="control-group">
+                        <div class="control-label">
+                            {{ form_label( form.answer_not_applicable) }}
+                        </div>
+                        <div class="controls">
+                            {{ form_widget( form.answer_not_applicable, { 'attr': {'class': 'input-xxlarge' }}) }}
+                            {{ form_errors( form.answer_not_applicable ) }}
+                        </div>
                     </div>
                 </div>
             </div>
@@ -129,6 +158,7 @@
     <script type="text/javascript">
         var multipleAllowed = {{ field.section.auditform.binaryFlagOnly | json_encode() }};
         var flagged = {{ field.flag | json_encode()}};
+        var disabledLabel = 'the form does not allow for the weight to be set or for more than YES/NO answers to be defined';
         $( '.cisco-audit-flag-ckbox' ).on( 'click', function()
         {
             toggleBinaryAnswer();
@@ -143,15 +173,31 @@
         {
             if( $( '.cisco-audit-flag-ckbox' ).is( ':checked' ) &&  multipleAllowed === false )
             {
+                $( '#field_answer_acceptable' ).attr('disabled', 'disabled');
+                $( '#field_answer_acceptable:disabled' ).attr( 'title', disabledLabel );
+                $( '#field_answer_not_applicable' ).attr('disabled', 'disabled');
+                $( '#field_answer_not_applicable:disabled' ).attr( 'title', disabledLabel );
+                $( '#field_weight' ).attr('disabled', 'disabled');
+                $( '#field_weight:disabled' ).attr( 'title', disabledLabel );
+                /**
                 $( '#field_answer_acceptable' ).parents( '.control-group' ).hide();
                 $( '#field_answer_not_applicable' ).parents( '.control-group' ).hide();
                 $( '#field_weight' ).parents( '.control-group' ).hide();
+                **/
             }
             else
             {
+                $( '#field_answer_acceptable' ).removeAttr('disabled');
+                $( '#field_answer_acceptable' ).removeAttr('title');
+                $( '#field_answer_not_applicable' ).removeAttr('disabled');
+                $( '#field_answer_not_applicable' ).removeAttr('title');
+                $( '#field_weight' ).removeAttr('disabled');
+                $( '#field_weight' ).removeAttr('title');
+                /**
                 $( '#field_answer_acceptable' ).parents( '.control-group' ).show();
                 $( '#field_answer_not_applicable' ).parents( '.control-group' ).show();
                 $( '#field_weight' ).parents( '.control-group' ).show();
+                **/
             }
 
         };
