completed refactor binaryOnly to multipleAnswerAllowed

--- a/Resources/views/AuditForm/edit.html.twig
+++ b/Resources/views/AuditForm/edit.html.twig
@@ -47,10 +47,10 @@
                 </div>
                 <div class="control-group">
                     <div class="control-label">
-                        {{ form_label(form.binaryFlagOnly) }}
+                        {{ form_label(form.allowMultipleAnswer) }}
                     </div>
                     <div class="controls">
-                        {{ form_widget(form.binaryFlagOnly) }}
+                        {{ form_widget(form.allowMultipleAnswer) }}
                     </div>
                 </div>
                 <div class="control-group">
