--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -25,6 +25,38 @@
         .cisco-audit-section-row {
             background-color: #EEE;
         }
+        .bs-docs-answers
+        {
+            position: relative;
+            margin: 15px 0;
+            padding: 39px 19px 14px;
+            background-color: white;
+            border: 1px solid #DDD;
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            border-radius: 4px;
+        }
+
+        .bs-docs-answers::after {
+            content: "Answers";
+            position: absolute;
+            top: -1px;
+            left: -1px;
+            padding: 3px 7px;
+            font-size: 12px;
+            font-weight: bold;
+            background-color: whiteSmoke;
+            border: 1px solid #DDD;
+            color: #9DA0A4;
+            -webkit-border-radius: 4px 0 4px 0;
+            -moz-border-radius: 4px 0 4px 0;
+            border-radius: 4px 0 4px 0;
+        }
+        .shadow-element {
+            opacity: .5;
+            background-color: #B9C2DA;
+            padding-: 4px 6px
+        }
         </style>
     {% endblock %}
     {% block javascripts %}
